feat: initial spring boot v4 upgrade